@@ -1,3 +1,7 @@
+Thu Jun 27 00:09:48 BST 2013  Colin Watson  <cjwatson@debian.org>
+
+	* lib/encodings.c (find_charset_locale): Fix memory leaks.
+
 Thu Jun 27 00:07:09 BST 2013  Peter Schiffer <pschiffe@redhat.com>
 
 	* src/check_mandirs.c (testmandirs): Check return value of chdir.
